basic-with-db/person-app/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app-type: demo
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 632a23303d947fd74f8e25978b967fcbac15dd21
    app.quarkus.io/build-timestamp: 2022-10-14 - 11:00:11 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: person-app
    app.kubernetes.io/version: "1.0"
    app: person-app
    app.kubernetes.io/part-of: persons
    app.openshift.io/connects-to: postgresql-person
    app.openshift.io/runtime: quarkus
  name: person-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: person-app
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app-type: demo
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 632a23303d947fd74f8e25978b967fcbac15dd21
    app.quarkus.io/build-timestamp: 2022-10-14 - 11:00:11 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: person-app
    app.kubernetes.io/version: "1.0"
    app: person-app
    app.kubernetes.io/part-of: persons
    app.openshift.io/connects-to: postgresql-person
    app.openshift.io/runtime: quarkus
  name: person-app
spec:
  replicas: 2
  selector:
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/name: person-app
  template:
    metadata:
      annotations:
        app-type: demo
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 632a23303d947fd74f8e25978b967fcbac15dd21
        app.quarkus.io/build-timestamp: 2022-10-14 - 11:00:11 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/version: "1.0"
        app.kubernetes.io/name: person-app
        app: person-app
        app.kubernetes.io/part-of: persons
        app.openshift.io/connects-to: postgresql-person
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  key: database-name
                  name: person-db
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: person-db
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: person-db
            - name: JAVA_APP_JAR
              value: /deployments/person-app-1.0-SNAPSHOT-runner.jar
          image: pminkows/person-app:1.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: person-app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - person-app
        from:
          kind: ImageStreamTag
          name: person-app:1.0
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app-type: demo
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 632a23303d947fd74f8e25978b967fcbac15dd21
    app.quarkus.io/build-timestamp: 2022-10-14 - 11:00:11 +0000
  labels:
    app.kubernetes.io/name: person-app
    app.kubernetes.io/version: "1.0"
    app: person-app
    app.kubernetes.io/part-of: persons
    app.openshift.io/connects-to: postgresql-person
    app.openshift.io/runtime: quarkus
  name: person-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: person-app
